--- a/package.json
+++ b/package.json
@@ -3,15 +3,16 @@
   "private": true,
   "version": "0.0.1",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "server": "node server/index.js",
-    "migrate": "knex --knexfile server/knexfile.cjs migrate:latest",
-    "migrate:rollback": "knex --knexfile server/knexfile.cjs migrate:rollback",
-    "seed": "knex --knexfile server/knexfile.cjs seed:run"
-  },
+ "scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "preview": "vite preview",
+  "server": "node server/index.js",
+  "start": "node server/index.js",
+  "migrate": "knex --knexfile server/knexfile.cjs migrate:latest",
+  "migrate:rollback": "knex --knexfile server/knexfile.cjs migrate:rollback",
+  "seed": "knex --knexfile server/knexfile.cjs seed:run"
+},
   "dependencies": {
     "@emoji-mart/data": "^1.2.1",
     "@emoji-mart/react": "^1.1.1",
