--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=4000
+NODE_ENV=production
 
 CLIENT_ORIGIN=http://localhost:5173,http://localhost:5174,https://imparablesmujeres.org,https://www.imparablesmujeres.org
 
