--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ ADMIN_EMAIL=editor@imparables.com
 ADMIN_SEED_PASSWORD=Imparable2025!
 ADMIN_DISPLAY_NAME=Editora Imparable
 
-DB_HOST=humsaludautomate_mysqlimparable
+DB_HOST=localhost
 DB_PORT=3306
-DB_USER=Imparables
-DB_PASSWORD=&%^^JJC58XSca83QvUm&
-DB_NAME=Imparables5
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=Imparables4
 
 SMTP_HOST=smtp.hostinger.com
 SMTP_PORT=465
